<resources>
    <string name="app_name">DictionMaster</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="author">by Eduardo Tercio</string>
    <string name="examples">Examples</string>
    <string name="language_english">English</string>
    <string name="language_spanish">Spanish</string>
    <string name="language_french">French</string>
    <string name="search">Search</string>
    <string name="type_a_word">Type a word…</string>
    <string name="subscribe">subscribe</string>
    <string name="login_com_o_google">Login com o Google</string>
</resources>